logs/tools/opensearch/cluster/service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: logging-cluster-monitor
  annotations: {}
  labels:
    opster.io/opensearch-cluster: logging-cluster
    prometheus-exporter: "true"
  namespace: opensearch-system
spec:
  selector:
    opster.io/opensearch-cluster: logging-cluster
  ports:
    - name: http
      port: 9200
      protocol: TCP
      targetPort: 9200
  sessionAffinity: None
  type: ClusterIP
